--- a/html/index.html
+++ b/html/index.html
@@ -67,7 +67,7 @@
       </tr>
       <tr>
         <td>Chairperson of the Parliament</td>
-        <td>Kakha Kuchava</td>
+        <td>Shalva Papuashvili</td>
       </tr>
       <tr>
         <td>Chief of General Staff</td>
