--- a/html/index.html
+++ b/html/index.html
@@ -47,7 +47,7 @@
       </tr>
       <tr>
         <td>Minister of Health</td>
-        <td>Ekatrine Tikradze</td>
+        <td>Zurab Azarashvili</td>
       </tr>
       <tr>
         <td>Minister of Internal Affairs</td>
