--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
       </tr>
       <tr>
         <td>Prime Minister</td>
-        <td>Giorgi Gakharia</td>
+        <td>Irakli Gharibashvili</td>
       </tr>
       <tr>
         <td>Vice Prime Minister<br />Minister of the Environment</td>
