--- a/html/index.html
+++ b/html/index.html
@@ -18,7 +18,7 @@
         <td>Irakli Gharibashvili</td>
       </tr>
       <tr>
-        <td>Vice Prime Minister<br />Minister of the Environment</td>
+        <td>Vice Prime Minister<br />Minister of Economy and Sustainable Development</td>
         <td>Levan Davitashvili</td>
       </tr>
       <tr>
@@ -34,12 +34,12 @@
         <td>Juansher Burchuladze</td>
       </tr>
       <tr>
-        <td>Minister of Economy and Sustainable Development</td>
-        <td>Natela Turnava</td>
-      </tr>
-      <tr>
         <td>Minister of Education and Science</td>
         <td>Mikheil Chkhenkeli</td>
+      </tr>
+      <tr>
+        <td>Minister of Environmental Protection and Agriculture</td>
+        <td>Otar Shamugia</td>
       </tr>
       <tr>
         <td>Minister of Finance</td>
