--- a/html/index.html
+++ b/html/index.html
@@ -22,10 +22,6 @@
         <td>Levan Davitashvili</td>
       </tr>
       <tr>
-        <td>Vice Prime Minister<br />Minister of Foreign Affairs</td>
-        <td>David Zakaliani</td>
-      </tr>
-      <tr>
         <td>Vice Prime Minister<br />Minister of Culture, Sports and Youth</td>
         <td>Tea Tsulukiani</td>
       </tr>
@@ -44,6 +40,10 @@
       <tr>
         <td>Minister of Finance</td>
         <td>Lasha Khutsishvili</td>
+      </tr>
+      <tr>
+        <td>Minister of Foreign Affairs</td>
+        <td>Ilia Darchiashvili</td>
       </tr>
       <tr>
         <td>Minister of Health</td>
